--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -61,7 +60,9 @@ body {
   width: 100%;
   height: auto;
   object-fit: cover;
-  max-height: 200px;
+  max-width: 250px; 
+  max-height: 200px; 
+  margin: 0 auto; 
 }
 
 .producto button {
@@ -72,7 +73,6 @@ body {
   border: none;
   cursor: pointer;
 }
-
 
 @media (max-width: 768px) {
   .navbar {
@@ -96,7 +96,6 @@ body {
   }
 }
 
-
 @media (max-width: 480px) {
   .navbar a {
     padding: 8px 10px;
@@ -119,9 +118,28 @@ body {
 
   .producto img {
     max-height: 150px;
+    max-width: 200px; 
   }
 
   .banner img {
     height: auto;
   }
+}
+.producto button a {
+  text-decoration: none;
+  color: white; 
+  font-size: 14px; 
+}
+
+.producto button {
+  margin-top: 10px;
+  padding: 10px;
+  background-color: #e91e63;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+.producto button a:hover {
+  color: #f8f9fa; 
 }
