--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,83 +1,168 @@
 
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: #fff;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
-  background-color: #333;
+  padding: 20px;
+  background: #333;
   color: white;
 }
 
-.navbar a {
+.navbar .logo {
+  font-size: 24px;
   color: white;
   text-decoration: none;
-  padding: 10px 15px;
 }
 
-.navbar ul {
+
+.navbar-links {
   display: flex;
-  list-style-type: none;
+  gap: 20px;
+}
+
+.navbar-links ul {
+  list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
 }
 
-.navbar li {
-  margin: 0 10px;
+.navbar-links li a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  font-size: 16px;
 }
 
+.navbar-links li a:hover {
+  background-color: #f953c6;
+  border-radius: 5px;
+}
+
+
+.menu-button-wrapper {
+  display: none;
+  position: relative;
+}
+
+.menu-button {
+  display: none;
+}
+
+.item-list {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%) scale(0);
+  background-color: #303242;
+  color: white;
+  width: 200px;
+  padding: 15px 0;
+  border-radius: 8px;
+  text-align: left;
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 0.4s, opacity 0.4s;
+}
+
+.item-list div {
+  padding: 10px 30px;
+  cursor: pointer;
+}
+
+.item-list div a {
+  color: white;
+  text-decoration: none;
+}
+
+.menu-button:checked ~ .item-list {
+  transform: translateX(-50%) scale(1);
+  opacity: 1;
+  visibility: visible;
+}
+
+.icon-wrapper {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+}
+
+.hamburger-line {
+  background-color: white;
+  height: 3px;
+  width: 100%;
+  border-radius: 5px;
+  transition: transform 0.4s;
+}
+
+.hamburger-line.first {
+  transform-origin: top left;
+}
+
+.hamburger-line.third {
+  transform-origin: bottom left;
+}
+
+
+.menu-button:checked ~ .icon-wrapper .hamburger-line.first {
+  transform: translateY(8px) rotate(45deg);
+}
+
+.menu-button:checked ~ .icon-wrapper .hamburger-line.second {
+  opacity: 0;
+}
+
+.menu-button:checked ~ .icon-wrapper .hamburger-line.third {
+  transform: translateY(-8px) rotate(-45deg);
+}
 
 @media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
-    text-align: center;
+  .navbar-links {
+    display: none;
   }
 
-  .navbar ul {
-    flex-direction: column;
-    margin-top: 10px;
+  .menu-button-wrapper {
+    display: block;
   }
 }
 
 
-@media (max-width: 480px) {
-  .navbar a {
-    padding: 8px 10px;
-    font-size: 14px;
-  }
+.signature-wrapper {
+  text-align: center;
+  margin-top: 50px;
 }
 
-.carrito-flotante {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  background-color: white;
-  box-shadow: -2px 0 10px rgba(0, 0, 0, 0.2);
-  display: none;
-  flex-direction: column;
-  padding: 20px;
-  z-index: 1000;
+.signature-title {
+  font-size: 16px;
+  color: #444;
 }
 
-.carrito-flotante h3 {
-  margin-top: 0;
-}
-
-.carrito-flotante ul {
-  list-style: none;
-  padding: 0;
-}
-
-.carrito-flotante ul li {
+.signature-link {
+  color: #444;
+  font-size: 13px;
+  text-decoration: none;
+  border-bottom: 2px solid #444;
   margin: 10px 0;
-}
-
-.carrito-flotante button {
-  margin-top: 20px;
-  padding: 10px;
-  background-color: #f00;
-  color: white;
-  border: none;
-  cursor: pointer;
 }
